--- a/counter/package.json
+++ b/counter/package.json
@@ -1,12 +1,12 @@
 {
-  
+  "homepage":"http://KaviyaAnnadurai13.github.io/React",
   "name": "counter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    
+    "predeploy":"npm run build",
     "deploy":"gh-pages -d build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
